Remove unused function checks and defines
congigure.ac checks for the presence of certain functions and creates
define indicating if it was found. Some of these defines are never
used, so the check (and the static define for Windows) can be safely
removed. This is the case for the following functions:
- __freadable
- _sysconf
- getrusage
- lsqrt
- memset
- nl_langinfo
- pow
- sqrt
- strchr
- strdup
- strstr
- strtoll
- strtoul
- strtoull
- uname

Also removed duplicate `strerror` in `AC_CHECK_FUNCS`.

--- a/configure.ac
+++ b/configure.ac
@@ -466,9 +466,7 @@ AC_SUBST([LIBGEN_LIBS])
 
 # Checks for library functions
 AC_CHECK_FUNCS([lrand48 drand48 srand48 setmode setenv getenv \
-	__freadable _sysconf getrusage strerror cbrt lsqrt vsnprintf \
-	strtoul strtoll strtoull uname memset nl_langinfo pow sqrt \
-	strchr strdup strerror strstr _NSGetEnviron])
+	strerror cbrt vsnprintf _NSGetEnviron])
 
 AC_REPLACE_FUNCS([strcasecmp strncasecmp strcasestr])
 
