fix rpm breakage

--- a/cmd/tools/Makefile.am
+++ b/cmd/tools/Makefile.am
@@ -19,10 +19,10 @@ pdfdir = $(pkgdatadir)/doc/pdf
 noinst_HEADERS = colortbl.h convert.h mmio.h matrix_market.h \
 	 graph_generator.h gml2gv.h gmlparse.h
 if ENABLE_STATIC
-bin_PROGRAMS = gc gvcolor gxl2gv acyclic nop ccomps sccmap tred tred2\
+bin_PROGRAMS = gc gvcolor gxl2gv acyclic nop ccomps sccmap tred \
 	unflatten gvpack gvpack_static dijkstra bcomps mm2gv gvgen gml2gv gv2gml graphml2gv
 else
-bin_PROGRAMS = gc gvcolor gxl2gv acyclic nop ccomps sccmap tred tred2\
+bin_PROGRAMS = gc gvcolor gxl2gv acyclic nop ccomps sccmap tred \
 	unflatten gvpack dijkstra bcomps mm2gv gvgen gml2gv gv2gml graphml2gv
 endif
 
