Remove usage of ast_common.h
Now that ast_common.h is never included anymore, the files
`ast_common.h.in`, `windows/include/ast_common.h` and all
`features/common` can be removed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,7 +37,7 @@ $(top_builddir)/graphviz_version.h: config.h
 
 EXTRA_DIST = $(txt) $(html) graphviz.spec.in graphviz.spec \
 	autogen.sh config/depcomp config/config.rpath \
-	builddate.h ast_common.h.in compat.h \
+	builddate.h compat.h \
 	Makeargs iffe config.iffe \
 	m4/README m4/iconv.m4 m4/lib-ld.m4 m4/lib-link.m4 m4/lib-prefix.m4 \
 	graphviz.7 Doxyfile.in Doxyfile awk \
@@ -61,4 +61,4 @@ pkg: dist
 	tar xzf graphviz-@VERSION@.tar.gz && make -C graphviz-@VERSION@/macosx/build && mv graphviz-@VERSION@/macosx/build/graphviz-*.pkg .
 
 
-DISTCLEANFILES = config.cache builddate.h ast_common.h FEATURE/* graphviz-@VERSION@*
+DISTCLEANFILES = config.cache builddate.h FEATURE/* graphviz-@VERSION@*
