Remove usage and definition of HAVE_ERRNO_H
The header "errno.h" is part of the standard C library, checking is
therefore not needed.

--- a/configure.ac
+++ b/configure.ac
@@ -419,7 +419,7 @@ dnl Checks for header files
 # AC_HEADER_STDC
 AC_CHECK_HEADERS(malloc.h \
 	fcntl.h search.h values.h limits.h termios.h \
-	errno.h unistd.h strings.h \
+	unistd.h strings.h \
 	sys/time.h sys/types.h sys/select.h \
 	sys/stat.h sys/mman.h \
 	sys/ioctl.h sys/inotify.h crt_externs.h)
