--- a/lib/vmalloc/Makefile.am
+++ b/lib/vmalloc/Makefile.am
@@ -9,12 +9,4 @@ libvmalloc_C_la_SOURCES = malloc.c vmbest.c vmclear.c vmclose.c vmdcheap.c \
 	vmprofile.c vmregion.c vmsegment.c vmset.c vmstat.c vmstrdup.c \
 	vmtrace.c vmwalk.c
 
-${top_builddir}/FEATURE/vmalloc: ${top_srcdir}/lib/vmalloc/features/vmalloc
-	mkdir -p ${top_builddir}/FEATURE
-	${top_srcdir}/iffe - set cc $(CC) $(CCMODE) $(CXFLAGS) : run ${top_srcdir}/lib/vmalloc/features/vmalloc > $@
-
-$(libvmalloc_C_la_OBJECTS): ${top_builddir}/FEATURE/vmalloc
-
-DISTCLEANFILES = ${top_builddir}/FEATURE/vmalloc
-
-EXTRA_DIST = README features vmalloc.vcxproj*
+EXTRA_DIST = README vmalloc.vcxproj*
