Replace Windows' pragma linking with VS linking
In various places, mostly the projects in `cmd` and `plugin`, had a
`#pragma comment( lib, "libname.lib" )` in the source code for linking
under Windows. Were possible, these have been removed and replaced link
specifications in the Visual Studio project files.
This seperates the linking from the source code and makes transitioning to
other build systems easier.

--- a/cmd/dot/dot.vcxproj
+++ b/cmd/dot/dot.vcxproj
@@ -68,6 +68,7 @@
       <SubSystem>Console</SubSystem>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalDependencies>cgraph.lib;gvc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -88,6 +89,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <DataExecutionPrevention />
       <TargetMachine>MachineX86</TargetMachine>
+      <AdditionalDependencies>cgraph.lib;gvc.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
