--- a/cmd/edgepaint/edgepaint.vcxproj
+++ b/cmd/edgepaint/edgepaint.vcxproj
@@ -66,7 +66,7 @@
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>lab_gamut.lib;getopt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lab_gamut.lib;getopt.lib;cdt.lib;cgraph.lib;gvc.lib;ingraphs.lib;sfdp.lib;sparse.lib;edgepaintlib.lib;neatogen.lib;rbtree.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <TargetMachine>MachineX86</TargetMachine>
@@ -87,7 +87,7 @@
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>lab_gamut.lib;getopt.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>lab_gamut.lib;getopt.lib;cdt.lib;cgraph.lib;gvc.lib;ingraphs.lib;sfdp.lib;sparse.lib;edgepaintlib.lib;neatogen.lib;rbtree.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <GenerateDebugInformation>No</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
