Move headers checks features/sfio to configure.ac
Some headers required new checks, for some headers, checks were already
present in configure.ac

--- a/configure.ac
+++ b/configure.ac
@@ -419,9 +419,9 @@ dnl Checks for header files
 # AC_HEADER_STDC
 AC_CHECK_HEADERS(malloc.h \
 	fcntl.h search.h termios.h \
-	unistd.h strings.h stat.h \
+	unistd.h strings.h stat.h vfork.h \
 	sys/time.h sys/types.h sys/select.h \
-	sys/stat.h sys/mman.h \
+	sys/stat.h sys/mman.h sys/vfork.h \
 	sys/ioctl.h sys/inotify.h crt_externs.h)
 AC_HEADER_TIME
 AC_HEADER_DIRENT
